--- a/frontend/src/Components/Deshboard/Sidebar/style.css
+++ b/frontend/src/Components/Deshboard/Sidebar/style.css
@@ -1,19 +1,19 @@
 .sidebar {
-    width: 285px;
-    border-right: 1px solid rgba(0, 0, 0, 0.1);
-    min-height: calc(100vh - 92px);
-    height: 100%;
+    border: 1px solid #e0e0e0;
+    height: fit-content;
+    border-radius: 10px;
 }
 
-.sidebarItem div a div {
-    font-family: "Noto Sans JP", sans-serif;
-    color: rgba(0, 0, 0, 0.9);
-    font-size: 18px;
-    font-weight: 400;
-    height: 50px;
-    padding-top: calc(20px / 2);
-    padding-bottom: calc(24px / 2);
-    padding-left: 20px;
-    padding-right: 20px;
+.dashboardBorderBottom {
     border-bottom: 1px solid #e0e0e0;
+}
+
+.sidebarItem a div {
+    padding: 15px;
+    color: #000;
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0.2px;
 }
