--- a/frontend/src/Components/Deshboard/UpdateUser/style.css
+++ b/frontend/src/Components/Deshboard/UpdateUser/style.css
@@ -1,72 +1,74 @@
-.UpdateUserContainer {
+.updateUserContainer {
     width: 100%;
-    min-height: calc(100vh - 102px);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .updateUserContent {
+    background: #cf559210;
     width: 400px;
     margin: 50px auto;
-    background-color: rgb(255, 255, 255);
-    border: 1px solid rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
-    padding: 30px 30px;
-    border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
 }
 
 .updateUserContent form {
     width: 100%;
+    padding: 30px;
 }
 
 .updateUserForm h2 {
-    color: rgba(0, 0, 0);
-    font-size: 26px;
-    font-weight: 300;
-    font-family: "Noto Sans JP", sans-serif;
+    color: #252525;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: "Roboto", sans-serif;
     text-align: center;
     margin: 0;
     margin-bottom: 30px;
+    letter-spacing: 0.4px;
 }
 
 .updateUserForm div {
     width: 100%;
-    margin-top: calc(40px / 2);
-    margin-bottom: calc(40px / 2);
 }
 
 .updateUserForm div input {
     width: 100%;
-    border: 1px solid #87878730;
-    border-radius: 3px;
-    background-color: transparent;
+    margin-top: calc(30px / 2);
+    margin-bottom: calc(30px / 2);
+    border: none;
+    border-radius: 1px;
     height: 55px;
-    font-size: 17px;
+    font-size: 16px;
     font-weight: 400;
     padding: 0px 10px;
-    color: rgba(0, 0, 0, 0.9);
+    color: #252525;
+    letter-spacing: 0.2px;
+    background: #dd509712;
 }
 
-.updateUserForm div select {
-    width: 100%;
-    border: 1px solid #87878730;
-    border-radius: 3px;
-    background-color: transparent;
-    height: 55px;
-    font-size: 17px;
-    font-weight: 400;
-    padding: 0px 10px;
-    color: rgba(0, 0, 0, 0.9);
-}
-
-.updateUserForm div select:focus,
 .updateUserForm div input:focus {
     outline: none;
+}
+
+.updateUserBtns {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+.updateUserBtns div {
+    color: #252525;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: "Roboto", sans-serif;
+    background-color: #dd509715;
+    padding: 15px 15px;
+    border: none;
+    cursor: pointer;
+    letter-spacing: 0.4px;
+    text-align: center;
 }
 
 .submitBtn {
@@ -76,17 +78,15 @@
 }
 
 .submitUpdateUser {
-    background-color: rgb(224, 223, 223);
+    width: 120px;
+    color: #252525;
+    font-size: 14px;
+    font-weight: 600;
+    font-family: "Roboto", sans-serif;
+    background-color: #dd509720;
+    padding: 15px 15px;
     border: none;
-    font-family: "Noto Sans JP", sans-serif;
-    color: rgba(0, 0, 0);
-    font-size: 17px;
-    font-weight: 500;
-    padding: 7px 0px 10px 0px;
-    width: 140px;
-    height: 50px;
-    text-align: center;
-    border-radius: 2px;
-    margin-top: 30px;
     cursor: pointer;
+    letter-spacing: 0.4px;
+    margin-top: 40px;
 }
