--- a/frontend/src/Components/Deshboard/UpdateProduct/style.css
+++ b/frontend/src/Components/Deshboard/UpdateProduct/style.css
@@ -1,109 +1,128 @@
-.newProductContainer {
+.updateProductContainer {
     width: 100%;
-    min-height: calc(100vh - 102px);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.newProductContent {
+.updateProductContent {
     width: 450px;
-    margin: 50px auto;
-    background-color: rgb(255, 255, 255);
-    border: 1px solid rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
-    padding: 30px 30px;
-    border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+    overflow: hidden;
+    border-radius: 1px;
+    background: #cf559210;
+    padding: 30px 29px;
 }
 
-.newProductContent form {
+.updateProductContent form {
     width: 100%;
 }
 
-.newProductContent form h2 {
-    color: rgba(0, 0, 0);
-    font-size: 26px;
-    font-weight: 300;
-    font-family: "Noto Sans JP", sans-serif;
-    text-align: center;
-    margin: 0;
+.updateProductContent form h2 {
+    color: #252525;
+    font-family: "Roboto", sans-serif;
+    cursor: pointer;
+    display: grid;
+    place-items: center;
+    width: 100%;
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 0.4px;
     margin-bottom: 30px;
 }
 
-.newProductContent form div {
-    width: 100%;
-    margin-top: calc(40px / 2);
-    margin-bottom: calc(40px / 2);
+.updateProductContent form .inputField {
+    margin-top: 20px;
 }
 
-.newProductContent form input,
-.newProductContent form select {
+.updateProductContent form .inputField input{
     width: 100%;
-    border: 1px solid #87878730;
-    border-radius: 3px;
-    background-color: transparent;
+    border-radius: 1px;
     height: 55px;
-    font-size: 17px;
+    font-size: 16px;
     font-weight: 400;
     padding: 0px 10px;
-    color: rgba(0, 0, 0, 0.9);
+    color: #252525;
+    letter-spacing: 0.2px;
+    background: #dd509712;
+    border: none;
 }
 
-.newProductContent form textarea {
-    border: 1px solid #87878730;
-    border-radius: 3px;
-    background-color: transparent;
-    min-height: 100px;
-    max-height: 100px;
-    min-width: 100%;
-    max-width: 100%;
-    font-size: 17px;
+.updateProductContent form .textareaField {
+    margin-top: 20px;
+    height: 100px;
+}
+
+.updateProductContent form .inputField input::placeholder,
+.updateProductContent form .textareaField textarea::placeholder {
+    color: #2f2f2f;
+}
+
+.updateProductContent form .textareaField textarea {
+    width: 100%;
+    height: 100px;
+    border-radius: 1px;
+    font-size: 16px;
     font-weight: 400;
-    padding: 0px 10px;
-    color: rgba(0, 0, 0, 0.9);
+    padding: 10px 10px;
+    color: #252525;
+    letter-spacing: 0.2px;
+    background: #dd509712;
+    border: none;
+    resize: none;
 }
 
-.newProductContent form input:focus,
-.newProductContent form textarea:focus,
-.newProductContent form select:focus {
+.updateProductContent form input:focus,
+.updateProductContent form textarea:focus,
+.updateProductContent form select:focus {
     outline: none;
 }
 
-#createProductFormFile>input {
-    padding: 0px !important;
+.textareaField textarea::-webkit-scrollbar {
+    width: 10px;
 }
 
-#createProductFormFile>input::file-selector-button {
-    cursor: pointer;
+.textareaField textarea::-webkit-scrollbar-track {
+    background: #dd509710;
+}
+
+.textareaField textarea::-webkit-scrollbar-thumb {
+    background: #dd509725;
+}
+
+#updateProductFile {
+    margin-top: 20px;
+}
+
+#updateProductFile input {
     width: 100%;
-    z-index: 2;
+}
+
+#updateProductFile input::file-selector-button {
+    width: 100%;
     height: 55px;
-    border: none;
-    margin: 0;
-    padding: 0;
-    font-family: "Noto Sans JP", sans-serif;
-    font-size: 17px;
-    font-weight: 500;
-    color: rgba(0, 0, 0, 0.6);
     padding-bottom: 2px;
-    background-color: transparent;
-    border-radius: 3px;
+    z-index: 2;
+    border: none;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: #252525;
+    background-color: #dd509711;
+    cursor: pointer;
+    border-radius: 1px;
+    letter-spacing: 0.2px;
+    padding: 0px;
 }
 
-#createProductFormImage {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: wrap;
+#updateProductImage {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 5px;
+    margin-top: 10px;
 }
 
-#createProductFormImage .outerBodyImage {
-    width: 25%;
+#updateProductImage .outerBodyImage {
     object-fit: contain;
     display: flex;
     justify-content: flex-start;
@@ -112,37 +131,99 @@
     margin: 0px;
 }
 
-#createProductFormImage .InnerBodyImage {
-    padding: 3px;
-    margin: 5px;
-    background-color: rgb(236, 236, 236);
-    border: 1px solid rgba(243, 243, 243, 0.95);
-}
-
-#createProductFormImage .outerBodyImage .InnerBodyImage img {
-    object-fit: contain;
+#updateProductImage .InnerBodyImage {
+    background-color: #f4339715;
     height: 100px;
     width: 100%;
 }
 
-.submitBtnCreateProdcuct {
+#updateProductImage .outerBodyImage .InnerBodyImage img {
+    object-fit: contain;
+    height: 100%;
+    width: 100%;
+    padding: 3px;
+}
+
+.submitBtnUpdateProdcuct {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 40px;
 }
 
-.newProductContent form button {
-    background-color: rgb(224, 223, 223);
+.updateProductContent form button {
+    width: 120px;
+    color: #252525;
+    font-size: 14px;
+    font-weight: 600;
+    font-family: "Roboto", sans-serif;
+    background-color: #dd509720;
+    padding: 15px 15px;
     border: none;
-    font-family: "Noto Sans JP", sans-serif;
-    color: rgba(0, 0, 0);
-    font-size: 17px;
-    font-weight: 500;
-    padding: 7px 0px 10px 0px;
-    width: 140px;
-    height: 50px;
-    text-align: center;
-    border-radius: 2px;
-    margin-top: 20px;
     cursor: pointer;
+    letter-spacing: 0.4px;
+}
+
+.categoryBox {
+    width: 100%;
+    height: 100%;
+}
+
+.categoryBox .heading {
+    margin-top: calc(40px / 2);
+    margin-bottom: calc(20px / 2);
+    width: 100%;
+    border: none;
+    border-radius: 1px;
+    height: 55px;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 0px 10px;
+    color: #252525;
+    letter-spacing: 0.2px;
+    background: #dd509712;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.categoryList {
+    background: #dd509712;
+    display: flex;
+    flex-direction: column;
+    height: 200px;
+    overflow-y: scroll;
+}
+
+.categoryList div {
+    padding: 7px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.categoryList div:hover {
+    background: #dd509710;
+}
+
+.categoryList::-webkit-scrollbar {
+    width: 10px;
+}
+
+.categoryList::-webkit-scrollbar-track {
+    background: #dd509710;
+}
+
+.categoryList::-webkit-scrollbar-thumb {
+    background: #dd509725;
+}
+
+@media only screen and (max-width: 900px) {
+    .updateProductContent {
+        width: 100%;
+        padding: 30px 15px;
+    }    
 }
