--- a/frontend/src/Components/Deshboard/Deshboard/style.css
+++ b/frontend/src/Components/Deshboard/Deshboard/style.css
@@ -1,8 +1,8 @@
 .deshboardContent {
-    margin: 20px 15px;
+    margin: 15px 15px;
     display: grid;
-    grid-template-columns: 1fr 4fr;
-    gap: 20px;
+    grid-template-columns: 1fr;
+    gap: 15px;
 }
 
 .deshboardContainer {
@@ -10,88 +10,68 @@
 }
 
 .deshboardContainer h2 {
+    font-family: 'Caveat';
+    color: #f43397;
+    font-size: 34px;
+    font-weight: 400;
+    padding-bottom: 3px;
     text-align: center;
-    width: 100%;
-    margin: 0;
-    font-family: "Roboto", sans-serif;
-    color: rgba(0, 0, 0, 0.9);
-    font-size: 36px;
-    font-weight: 300;
-    background-color: rgb(255, 255, 255);
-    padding: 20px;
-    border-bottom: 1px solid #e0e0e0;
-    padding-bottom: 25px;
-    height: 100px;
+    letter-spacing: 0.2px;
 }
 
 .deshboardSummary .deshboardSummaryOne {
     width: 100%;
-    background-color: rgb(255, 255, 255);
     border: none;
-    border-bottom: 1px solid #e0e0e0;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100px;
     padding-bottom: 5px;
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 .deshboardSummary .deshboardSummaryOne p {
     text-align: center;
-    font-family: "Roboto", sans-serif;
-    color: rgba(0, 0, 0, 0.9);
-    font-size: 25px;
-    font-weight: 300;
+    font-family: 'Caveat';
+    color: #252525;
+    font-size: 28px;
+    font-weight: 400;
+    letter-spacing: 0.2px;
 }
 
 .deshboardSummaryTwo {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
 }
 
 .deshboardSummaryTwo .linkWithDetails {
-    width: 33.333333%;
     display: flex; 
     justify-content: center;
     align-items: center;
-    background-color: rgb(255, 255, 255);
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: #dd509710;
     border-top: none;
     border-right: none;
     height: 100px;
 }
 
-.deshboardSummaryTwo .linkWithDetails:nth-child(3n+1) {
-    border-left: none;
-}
-
-.deshboardSummaryTwo .linkWithDetails a {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-}
-
 .deshboardSummaryTwo .linkWithDetails a p {
     text-align: center;
-    font-family: "Roboto", sans-serif;
-    color: rgba(0, 0, 0, 0.9);
-    font-size: 25px;
-    font-weight: 300;
-    margin: 0;
+    font-family: "Caveat", sans-serif;
+    color: #252525;
+    font-size: 26px;
+    font-weight: 400;
+    letter-spacing: 0.2px;
 }
 
 @media only screen and (max-width: 1100px) {
-    .deshboardContent {
-        margin: 15px 15px;
-        display: grid;
-        grid-template-columns: 1fr 3fr;
+    .deshboardSummaryTwo {
+        grid-template-columns: 1fr 1fr;
     }    
 }
 
-@media only screen and (max-width: 900px) {
-    .deshboardContent {
-        margin: 15px 15px;
-        display: grid;
+@media only screen and (max-width: 700px) {
+    .deshboardSummaryTwo {
         grid-template-columns: 1fr;
-    }    
+    }   
 }
