--- a/frontend/src/Components/Order/OrderDetails/style.css
+++ b/frontend/src/Components/Order/OrderDetails/style.css
@@ -1,7 +1,7 @@
 .myordersContainer {
     width: 100vw;
     max-width: 100%;
-    height: calc(100vh - 110px);
+    min-height: calc(100vh - 110px);
     display: flex;
     justify-content: center;
     align-items: center;
