Filter functionality done

--- a/frontend/src/Components/Deshboard/UpdateUser/style.css
+++ b/frontend/src/Components/Deshboard/UpdateUser/style.css
@@ -89,3 +89,13 @@
     letter-spacing: 0.4px;
     margin-top: 40px;
 }
+
+@media only screen and (max-width: 900px) {
+    .updateUserContent {
+        width: 100%;
+    }    
+
+    .updateUserContent form {
+        padding: 30px 15px;
+    }
+}
