--- a/frontend/src/Components/Product/Products/ProductsCard/style.css
+++ b/frontend/src/Components/Product/Products/ProductsCard/style.css
@@ -29,6 +29,7 @@
     color: #545454e6;
     font-family: "Roboto", sans-serif;
     letter-spacing: 0.2px;
+    height: 38px;
 }
 
 .productsCard .productsDetails .reviews {
