--- a/frontend/src/Components/Product/Products/style.css
+++ b/frontend/src/Components/Product/Products/style.css
@@ -1,3 +1,8 @@
+.noItemWrapper {
+    display: flex;
+    justify-content: center;
+}
+
 .productsPageBody {
     margin: 15px 15px;
     display: grid;
